<resources>
    <string name="app_name">NuuInfo</string>
    <string name="success">success</string>

    <string name="used">Data Used:</string>
    <string name="total">Data Total:</string>

    <string name="data_surplus">data surplus:%1$s</string>
    <string name="start_time">start time:%1$s</string>
    <string name="end_time">end time:%1$s</string>


    <string name="hotspot_name">Hotspot name</string>
    <string name="hotspot_password">Hotspot password</string>

    <string name="Set_user">Set User</string>
    <string name="Set_owner">Set Owner</string>


    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Konnect</string>
    <string name="nav_header_subtitle">mifi@konnect.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_settings">Settings</string>


    <!--Main Activity -->
    <string name="menu_home">Home</string>
    <string name="menu_news">News</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_buy">Buy Package</string>
    <string name="menu_package">My Package</string>
    <string name="menu_device">My Device</string>
    <string name="menu_login">Login</string>
    <string name="menu_contact">Contact Us</string>

    <string name="divide_title">Device Information</string>

    <string name="exit_toast">please click back again to exit!</string>

    <!--base permission fragment -->
    <string name="no_permissions">Unauthorized APP required permissions</string>
    <string name="wait">Requesting please wait &#8230;&#8230;&#8230;</string>

    <!--home fragment-->
    <string name="power_level">Power Level</string>
    <string name="today_used">Today Usage</string>
    <string name="net_status">Network Status</string>
    <string name="net_connect">Device:%1$d Connected</string>

    <!--news fragment-->
    <string name="news_empty">No latest news</string>

    <!--login fragment-->
    <string name="prompt_email">Email address or Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="lost_password">Lost you password?</string>
    <string name="lost_email">Lost you email?</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--buy package fragment-->
    <string name="buy_package_title">To top up your device,please input your device SN or scan the QR code printed on the back of the device to explore available packages.</string>
    <string name="input_device">Input Your Device SN</string>
    <string name="or">Or</string>
    <string name="scan_qr">Scan Your QR code</string>
    <string name="need_camera_permissions">Need to use camera permissions</string>

    <!--contact us fragment-->
    <string name="contact">Contact</string>
    <string name="email_address">konnect-cs@nuumobile.com</string>
    <string name="correspondence">Correspondence address</string>
    <string name="company_address">16F,CE0 Tower,77 Wing Hong St.Kwoloon,HongKong</string>


    <!--devices fragment-->
    <string name="devices_empty">No devices</string>
    <string name="connect_devices">Connected Device(s)</string>
    <string name="select_title">Please select for device</string>

    <!--my package fragment-->
    <string name="no_record">No records found</string>


    <!--register activity-->
    <string name="input_display_name">Display Name*</string>
    <string name="input_email">Email*</string>
    <string name="input_contact">Contact</string>
    <string name="input_country">Home Country*</string>
    <string name="input_password">Password*</string>
    <string name="input_retype">Re_type*</string>
    <string name="mandatory">*Mandatory input field</string>
    <string name="submit">Submit</string>

    <string name="name_empty">display name is empty!!!</string>
    <string name="email_empty">email is empty!!!</string>
    <string name="email_error">email address is invalid!!!</string>
    <string name="mobile_empty">mobile is empty!!!</string>
    <string name="mobile_invalid">mobile is invalid!!!</string>

    <string name="password_empty">password is empty!!!</string>
    <string name="retype_empty">retype is empty!!!</string>
    <string name="password_retype">password retype error!!!</string>


    <!--forget activity-->
    <string name="forget_email">Forget email</string>
    <string name="forget_password">Forget password</string>

    <string name="your_email">Your email</string>
    <string name="your_password">Please enter your mobile</string>

    <!-- dialog-->
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="male">male</string>
    <string name="female">female</string>

    <!-- country picker-->
    <string name="search">Search</string>

</resources>
