<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/custom_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/nav_header_title" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/buy_package_title" />

    <Button
        android:id="@+id/btn_option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_rectangle_white_corner_up"
        android:padding="5dp"
        android:text="option1"
        android:textColor="@drawable/common_txt_selector"
        android:textSize="15sp" />


    <Button
        android:id="@+id/btn_option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/shape_rectangle_white_corner_down"
        android:padding="5dp"
        android:text="option2"
        android:textColor="@drawable/common_txt_selector"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_rectangle_white"
        android:padding="5dp"
        android:text="@string/btn_cancel"
        android:textColor="@drawable/common_txt_selector"
        android:textSize="15sp" />

</LinearLayout>