<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#D2D6D8"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/homeFragmentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power_level" />

                <com.nuu.view.WaveLoadingView
                    android:id="@+id/wv_power"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp"
                    app:wlv_borderColor="@android:color/white"
                    app:wlv_borderWidth="3dp"
                    app:wlv_progressValue="40"
                    app:wlv_round_rectangle="true"
                    app:wlv_shapeType="circle"
                    app:wlv_titleCenter="40%"
                    app:wlv_titleCenterColor="@color/colorPrimary"
                    app:wlv_titleCenterSize="16sp"
                    app:wlv_titleCenterStrokeColor="@color/colorPrimaryDark"
                    app:wlv_titleCenterStrokeWidth="0.5dp"
                    app:wlv_triangle_direction="north"
                    app:wlv_waveAmplitude="20"
                    app:wlv_waveColor="@color/colorAccent" />


            </LinearLayout>

            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/homeFragmentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_used" />

                <com.nuu.view.WaveLoadingView
                    android:id="@+id/wv_used"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp"
                    app:wlv_borderColor="@android:color/white"
                    app:wlv_borderWidth="3dp"
                    app:wlv_progressValue="40"
                    app:wlv_round_rectangle="true"
                    app:wlv_shapeType="circle"
                    app:wlv_titleCenter="40%"
                    app:wlv_titleCenterColor="@color/colorPrimary"
                    app:wlv_titleCenterSize="16sp"
                    app:wlv_titleCenterStrokeColor="@color/colorPrimaryDark"
                    app:wlv_titleCenterStrokeWidth="0.5dp"
                    app:wlv_triangle_direction="north"
                    app:wlv_waveAmplitude="20"
                    app:wlv_waveColor="@color/colorAccent" />


            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#E6E6E6"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_signal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/signal_0" />

                <TextView
                    style="@style/homeFragmentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/net_status" />


            </LinearLayout>

            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/connection_icon" />

                <TextView
                    android:id="@+id/tv_connect"
                    style="@style/homeFragmentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/net_connect" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:src="@mipmap/btn_refresh" />
</RelativeLayout>